p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
spec:
  rules:
  - host: app1.com
    http:
      paths:
      - path: /  # All traffic to the root path ('/') of 'app1.com' will be routed.
        pathType: Prefix  # Specifies that the path is a prefix match, so /app1 and any subpaths will be matched.
        backend:
          service:
            name: app1  # The traffic will be forwarded to the 'app1' service.
            port:
              number: 80  # The service will be accessed on port 80.

  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 80

  - http:
      paths:
      - path: /  
        pathType: Prefix
        backend:
          service:
            name: app3
            port:
              number: 80
